# otus-cpp-basics-project

./: CMakeLists.txt  README.md
configs/language/: c.json
include/: c_lang.h  lexer.h  printer.h  printer_common.h
include/lang/: c_printer.h
src/: lexer.cpp  main.cpp  printer.cpp
src/lang/: c_printer.cpp
